--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mohammad Rokib Hasan</title>
-  
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
         <a href="#experience" class="hover:text-white transition">Experience</a>
         <a href="#projects" class="hover:text-white transition">Projects</a>
         <a href="#contact" class="hover:text-white transition">Contact</a>
-        <a href="#" class="bg-teal-500 text-black font-semibold py-2 px-4 rounded-lg shadow-lg hover:bg-teal-400 transition flex items-center glow-button text-sm">
+        <a href="resume.pdf" class="ml-4 bg-teal-500 text-black font-semibold px-3 py-1.5 rounded-md shadow hover:bg-teal-400 transition text-sm flex items-center">
           Resume
         </a>
       </div>
@@ -52,7 +52,7 @@
       <a href="#experience" class="block py-3 px-4 hover:bg-gray-800 transition">Experience</a>
       <a href="#projects" class="block py-3 px-4 hover:bg-gray-800 transition">Projects</a>
       <a href="#contact" class="block py-3 px-4 hover:bg-gray-800 transition">Contact</a>
-      <a href="#" class="block py-2 px-4 bg-teal-500 text-black font-semibold hover:bg-teal-400 transition text-center rounded-lg">
+      <a href="resume.pdf" class="block py-2 px-4 bg-teal-500 text-black font-semibold hover:bg-teal-400 transition text-center rounded-lg">
         Resume
       </a>
     </div>
@@ -100,8 +100,6 @@
     </div>
   </section>
 
-  <!-- More sections here... -->
-  
   <!-- JS -->
   <script src="script.js"></script>
 </body>
