--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mohammad Rokib Hasan - Data Analytics Portfolio. Expert in Power BI, SQL, Excel for data-driven insights.">
+    <meta name="keywords" content="Data Analytics, Power BI, SQL, Excel, Data Visualization, Business Intelligence">
+    <meta name="author" content="Mohammad Rokib Hasan">
     <title>Mohammad Rokib Hasan - Data Analytics Portfolio</title>
     
     <!-- External Fonts -->
@@ -161,7 +164,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Contact Section -->
     <section id="contact" class="py-20 flex flex-col items-center justify-center bg-[#121626] text-gray-300">
         <div class="container mx-auto px-4 text-center max-w-2xl">
