--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="w-64 h-64 sm:w-80 sm:h-80 lg:w-96 lg:h-96 rounded-full overflow-hidden gradient-border-box flex items-center justify-center relative">
                     <div class="absolute inset-0 w-full h-full rounded-full bg-gradient-to-br from-teal-500 to-cyan-500 animate-pulse-slow"></div>
                     <div class="relative w-[calc(100%-8px)] h-[calc(100%-8px)] bg-gray-800 rounded-full overflow-hidden z-10 flex items-center justify-center">
-                        <img id="profile-image" src="" alt="Mohammad Rokib Hasan" class="w-full h-full object-cover">
+                        <img id="profile-image" src="./assets/hero.png" alt="Mohammad Rokib Hasan" class="w-full h-full object-cover">
                     </div>
                 </div>
             </div>
@@ -188,3 +188,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
