--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Mohammad Rokib Hasan - Data Analytics Portfolio</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%2348B3AF'/><text x='50' y='65' font-family='Arial, sans-serif' font-size='45' font-weight='bold' text-anchor='middle' fill='white'>RH</text></svg>">
+    <link rel="icon" type="image/svg+xml" href="/.assets/favicon-32x32.png' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%2348B3AF'/><text x='50' y='65' font-family='Arial, sans-serif' font-size='45' font-weight='bold' text-anchor='middle' fill='white'>RH</text></svg>">
     
     <!-- External Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -565,3 +565,4 @@
     </script>
 </body>
 </html>
+
